# subtitle-merger

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  requirements.txt  subtitle-merger.py
backend/: Cargo.toml
backend/src/: main.rs
docs/agents/: domain.md  issue-tracker.md  planning-workflow.md  triage-labels.md
frontend/: package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: agent_loop_context.py  agent_loop_diagnostics.py  agent_loop_model_policy.py  agent_loop_queue.py
